[package]
name = "RD_web"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.3.0"
bcrypt = "0.16.0"
r2d2 = "0.8"
r2d2-diesel = "1.0"
mysql = "25.0.1"
reqwest = "0.12.9"
redis = "0.27.5"

dotenv = "0.15"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
tokio = { version = "1", features = ["full"] }